--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 <title>Level Up: A creative tech conference</title>
 
 <meta name="description" content="Level Up is a creative tech conference located in Saratoga Springs, NY that explores the process of creating and shipping modern software products." />
-<meta name="keywords" content="levelup, level up, UX, UI, NodeJS, Ruby, PHP, BackboneJS, AngularJS, ObjectiveC, Java, Riak, Redis, User Experience, Creative Design">
+<meta name="keywords" content="levelup, level up, level up con, UX, UI, NodeJS, Ruby, PHP, BackboneJS, AngularJS, ObjectiveC, Java, Riak, Redis, User Experience, Creative Design, conference, saratoga, saratoga tech, design, web design, software">
 <meta name="copyright" content="MadGlory Interactive, LLC. Copyright (c) 2014" />
 <meta name="google-site-verification" content="hgr-9Ix8VkngElgtjEQR-CJWdWUutCToD-leoEwHctc" />
 <meta name="robots" content="index, follow" />
