--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,11 +1,40 @@
-<div class="full-width feed">
+<div class="full-width">
   <div class="row">
-    <div class="small-12 columns">
+
+
+    <div class="fixed">
+      <nav class="top-bar" data-topbar>
+        <ul class="title-area">
+          <li class="name">
+            <a href="#home" class="is-scroller-link"><img src="/img/levelup-sm.png" alt="LevelUp Logo" class="sm-logo"></a>
+          </li>
+          <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
+        </ul>
+
+        <section class="top-bar-section">
+<!--           <ul class="right reg">
+            <li class="register"><a href="https://nvite.com/levelupcon/b87/tickets">REGISTER</a></li>
+          </ul>    -->       
+          <ul class="right">
+            <li><a href="#speakers" class="is-scroller-link">Speakers</a></li>
+            <li><a href="#venue" class="is-scroller-link">Venue</a></li>
+            <!-- <li><a href="#" class="is-scroller-link">Schedule</a></li>  -->
+            <li><a href="#sponsors" class="is-scroller-link">Sponsors</a></li>
+            <li><a href="#about" class="is-scroller-link">About</a></li>
+            <li class="register"><a href="https://nvite.com/levelupcon/b87/tickets">REGISTER</a></li>
+          </ul>
+        </section>
+      </nav>
+    </div>
+
+
+
+    <!-- <div class="small-12 columns">
       <a href="http://twitter.com/levelupcon" target="_blank" class="twitter">
         <img src="/img/twitter-icon.png" alt="Twitter Icon">
       </a>
       <h6 class="status">Follow <a href="http://twitter.com/levelupcon">@levelupcon</a> on Twitter.</h6>
-    </div>
+    </div> -->
   </div>
 </div>
 
@@ -27,7 +56,7 @@
           <div class="large-3 columns details">October 8 &amp; 9, 2014</div>
           <div class="large-3 large-push-6 columns details">Saratoga Springs, NY</div>
           <div class="large-4 large-pull-4 columns">
-            <a href="#" data-reveal-id="firstModal" class="large button signup">Keep Me Updated</a>
+            <a href="https://nvite.com/levelupcon/b87/tickets" class="large button signup">Register</a>
           </div>
         </div>
 
