--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -1,4 +1,5 @@
 <script src="/js/jquery.js"></script>
+<script src="/js/vendor/jquery.singlePageNav.min.js"></script>
 <script src="/js/app.js"></script>
 <script src="/js/foundation.min.js"></script>
 <script src="/js/foundation/foundation.interchange.js"></script>
