--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -1,8 +1,18 @@
-<script src="/js/jquery.js"></script>
-<script src="/js/app.js"></script>
+<script src="/js/vendor/jquery.js"></script>
 <script src="/js/foundation.min.js"></script>
-<script src="/js/foundation/foundation.interchange.js"></script>
+<script src="/js/app.js"></script>
 <script type="text/javascript" src="http://js.addthisevent.com/atemay.js"></script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-33396402-4', 'levelupcon.com');
+  ga('require', 'linkid', 'linkid.js');
+  ga('send', 'pageview');
+</script>
 <!-- AddThisEvent Settings -->
 <script type="text/javascript">
   addthisevent.settings({
@@ -17,29 +27,4 @@
     facebook  : {show:true, text:"Facebook Event"},
     callback  : ""
   });
-</script>
-
-<script>
-  $(document).foundation();
-
-  $(function(){
-    $.getJSON('https://alpha-api.app.net/stream/0/users/@levelupcon/posts', function(res) {
-      var posts = res.data;
-
-      if(posts.length > 0){
-        $('.feed .status').html(posts[0].html + ' - <a href="http://twitter.com/levelupcon">@levelupcon</a>');
-      }
-    });
-  });
-</script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-33396402-4', 'levelupcon.com');
-  ga('require', 'linkid', 'linkid.js');
-  ga('send', 'pageview');
-
 </script>
