Updated register button

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,4 +1,4 @@
-
+<a name="home"></a>
 <div class="jumbotron">
   <div class="row">
     <div class="large-12 columns">
@@ -17,7 +17,7 @@
           <div class="large-3 columns details">October 8 &amp; 9, 2014</div>
           <div class="large-3 large-push-6 columns details">Saratoga Springs, NY</div>
           <div class="large-4 large-pull-4 columns">
-            <a href="#" data-reveal-id="firstModal" class="large button signup">Keep Me Updated</a>
+            <a href="https://nvite.com/levelupcon/b87/tickets" class="large button signup">Register Now</a>
           </div>
         </div>
 
