--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,28 +1,28 @@
 <div class="row collapse wide" id="nav" data-magellan-expedition="fixed">
-  <div class="large-2 columns hide-for-small-only">
-    <img src="http://placehold.it/125x50">
+  <div class="small-2 columns hide-for-small-only">
+    <img src="/img/levelup-sm.png" alt="LevelUp" class="sm-logo">
   </div>
-  <div class="large-8 columns hide-for-small-only">
-    <dl class="sub-nav">
-      <dd data-magellan-arrival="build">
+  <div class="small-8 columns hide-for-small-only">
+    <dl class="sub-nav" id="main-navigation">
+      <dd data-magellan-arrival="speakers">
         <a href="#speakers">Speakers</a>
       </dd>
-      <dd data-magellan-arrival="js">
+      <dd data-magellan-arrival="venue">
         <a href="#venue">Venue</a>
       </dd>
-<!--       <dd data-magellan-arrival="js">
+      <!-- <dd data-magellan-arrival="schedule">
         <a href="#schedule">Schedule</a>
       </dd> -->
-      <dd data-magellan-arrival="js">
+      <dd data-magellan-arrival="sponsors">
         <a href="#sponsors">Sponsors</a>
       </dd>
-      <dd data-magellan-arrival="js">
+      <dd data-magellan-arrival="about">
         <a href="#about">About</a>
       </dd>
     </dl>
   </div>
-  <div class="large-2 columns">
-    <a href="#" class="button large register">Register Now</a>
+  <div class="small-2 columns" id="navigation-register">
+    <a href="https://nvite.com/levelupcon/b87/tickets" class="button large register">Register Now</a>
   </div>
 </div>
 
