--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -22,7 +22,7 @@
     </dl>
   </div>
   <div class="small-2 columns" id="navigation-register">
-    <a href="https://nvite.com/levelupcon/b87/tickets" class="button large register">Register Now</a>
+    <a href="https://nvite.com/levelupcon/b87/tickets" class="button large register">Register</a>
   </div>
 </div>
 
