--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
 <div class="row collapse wide" id="nav" data-magellan-expedition="fixed">
   <div class="small-2 columns hide-for-small-only">
-    <img src="/img/levelup-sm.png" alt="LevelUp" class="sm-logo">
+    <a href="#home"><img src="/img/levelup-sm.png" alt="LevelUp" class="sm-logo"></a>
   </div>
   <div class="small-8 columns hide-for-small-only">
     <dl class="sub-nav" id="main-navigation">
