--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -21,7 +21,7 @@
       </dd>
     </dl>
   </div>
-  <div class="small-2 columns" id="navigation-register">
+  <div class="small-2 columns no-scroll" id="navigation-register">
     <a href="https://nvite.com/levelupcon/b87/tickets" class="button large register">Register</a>
   </div>
 </div>
