--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -21,8 +21,8 @@
       </dd>
     </dl>
   </div>
-  <div class="small-2 columns no-scroll" id="navigation-register">
-    <a href="https://nvite.com/levelupcon/b87/tickets" class="button large register">Register</a>
+  <div class="small-2 columns" id="navigation-register">
+    <a href="https://nvite.com/levelupcon/b87/tickets" class="button large register noscroll">Register</a>
   </div>
 </div>
 
