--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="large-12 columns">
       <div class="">
-        <h3>Early bird tickets are on sale NOW! Running out fast!</h3>
+        <h3>Specially Priced Attendee Badges On Sale Now!</h3>
         <h1 class="indent">Level Up</h1>
 
         <!-- Responsive retina image media queries -->
@@ -18,7 +18,7 @@
           <div class="large-3 columns details">October 8 &amp; 9, 2014</div>
           <div class="large-3 large-push-6 columns details">Saratoga Springs, NY</div>
           <div class="large-4 large-pull-4 columns">
-            <a href="https://nvite.com/levelupcon/b87/tickets" class="large button signup">Buy Early Bird Tickets</a>
+            <a href="https://nvite.com/levelupcon/b87/tickets" class="large button signup">Buy An Attendee Badgle</a>
           </div>
         </div>
       </div>
