--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
     {{ content }}
 
     {% include footer.html %}
+    {% include swag-modal.html %}
     {% include javascripts.html %}
   </body>
 </html>
