--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -18,7 +18,7 @@
           <div class="large-3 columns details">October 8 &amp; 9, 2014</div>
           <div class="large-3 large-push-6 columns details">Saratoga Springs, NY</div>
           <div class="large-4 large-pull-4 columns">
-            <a href="https://nvite.com/levelupcon/b87/tickets" class="large button signup">Buy An Attendee Badge</a>
+            <a href="https://nvite.com/levelupcon/b87/tickets" class="large button signup">Register</a>
           </div>
         </div>
       </div>
