--- a/_includes/swag-modal.html
+++ b/_includes/swag-modal.html
@@ -1,7 +1,18 @@
-<div id="earlybird-offer" class="reveal-modal" data-reveal>
-  <h2>Earlybird Offer</h2>
-  <p class="lead">I like free stuff.</p>
-  <p>And I cannot lie.</p>
+<div id="earlybird-offer" class="reveal-modal medium" data-reveal>
+  <h2>Pre-registered Schwag: <span>Only 125 available</span></h2>
+  <img src="../img/schwag.jpg" style="margin:0 auto;display:block;">
+  <p>How does a custom designed and tailored Schwag Package sound (<em>Ladies, don't worry we have special women's cut tees for you all</em>)? Everyone who has registered to date is already getting this total hook-up.</p>
+		
+		<ul>
+			<li>Custom Shirt (Men's &amp; Women's)</li>
+			<li>Leather Mousepad</li>
+			<li>16 oz Tall Pilsner Glass</li>
+			<li>Limited Edition Copper Coin</li>
+			<li>Sticker Set</li>
+		</ul>
+
+	<p>Luckily, we've still have a limited set of packages remaining! Register by <strong>August 15th to guarantee</strong> your personal Schwag Package and a spot at the very first Level Up Con.</p>
+
   <a class="close-reveal-modal">&#215;</a>
-  <p class="lead"><a href="https://nvite.com/levelupcon/b87/tickets" class="large button signup">Buy An Attendee Badge</a></p>
+  <p class="lead"><a href="http://bit.ly/levelupcon" class="large button signup">Register</a></p>
 </div>
