--- a/_includes/swag-modal.html
+++ b/_includes/swag-modal.html
@@ -1,5 +1,5 @@
 <div id="earlybird-offer" class="reveal-modal medium" data-reveal>
-  <h2>Registration Schwag: <span>Only 112 remaining!</span></h2>
+  <h2>Registration Schwag: <span><strong>106</strong> out of 150 remaining!</span></h2>
   <img src="../img/schwag.jpg" style="margin:0 auto;display:block;">
   <p>How does a custom designed and tailored Schwag Package sound (<em>Ladies, don't worry we have special women's cut tees for you all</em>)? Everyone who has registered to date is already getting this total hook-up.</p>
 		
