added nav-container so there is no jump in scrolling

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,28 +1,30 @@
-<div class="row collapse wide" id="nav" data-magellan-expedition="fixed">
-  <div class="small-2 columns hide-for-small-only">
-    <a href="#home"><img src="/img/levelup-sm.png" alt="LevelUp" class="sm-logo"></a>
-  </div>
-  <div class="small-8 columns hide-for-small-only">
-    <dl class="sub-nav" id="main-navigation">
-      <dd data-magellan-arrival="about">
-        <a href="#about">About</a>
-      </dd>
-      <dd data-magellan-arrival="speakers">
-        <a href="#speakers">Speakers</a>
-      </dd>
-      <dd data-magellan-arrival="venue">
-        <a href="#venue">Venue</a>
-      </dd>
-      <!-- <dd data-magellan-arrival="schedule">
-        <a href="#schedule">Schedule</a>
-      </dd> -->
-      <dd data-magellan-arrival="sponsors">
-        <a href="#sponsors">Sponsors</a>
-      </dd>
-    </dl>
-  </div>
-  <div class="small-2 columns" id="navigation-register">
-    <a href="https://nvite.com/levelupcon/b87/tickets" class="button large register noscroll">Register</a>
+<div class="nav-container">
+  <div class="row collapse wide" id="nav" data-magellan-expedition="fixed">
+    <div class="small-2 columns hide-for-small-only">
+      <a href="#home"><img src="/img/levelup-sm.png" alt="LevelUp" class="sm-logo"></a>
+    </div>
+    <div class="small-8 columns hide-for-small-only">
+      <dl class="sub-nav" id="main-navigation">
+        <dd data-magellan-arrival="about">
+          <a href="#about">About</a>
+        </dd>
+        <dd data-magellan-arrival="speakers">
+          <a href="#speakers">Speakers</a>
+        </dd>
+        <dd data-magellan-arrival="venue">
+          <a href="#venue">Venue</a>
+        </dd>
+        <!-- <dd data-magellan-arrival="schedule">
+          <a href="#schedule">Schedule</a>
+        </dd> -->
+        <dd data-magellan-arrival="sponsors">
+          <a href="#sponsors">Sponsors</a>
+        </dd>
+      </dl>
+    </div>
+    <div class="small-2 columns" id="navigation-register">
+      <a href="https://nvite.com/levelupcon/b87/tickets" class="button large register noscroll">Register</a>
+    </div>
   </div>
 </div>
 
