schedule all the things

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,9 +14,9 @@
         <dd data-magellan-arrival="venue">
           <a href="#venue">Venue</a>
         </dd>
-        <!-- <dd data-magellan-arrival="schedule">
+        <dd data-magellan-arrival="schedule">
           <a href="#schedule">Schedule</a>
-        </dd> -->
+        </dd>
         <dd data-magellan-arrival="sponsors">
           <a href="#sponsors">Sponsors</a>
         </dd>
