SOLD OUT BITCHES!

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -23,7 +23,7 @@
       </dl>
     </div>
     <div class="small-2 columns" id="navigation-register">
-      <a href="https://nvite.com/levelupcon/b87/tickets" class="button large register noscroll">Register</a>
+      <a href="https://nvite.com/levelupcon" class="button large register noscroll">SOLD OUT!</a>
     </div>
   </div>
 </div>
