updates to a 2015 teaser site

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,26 +4,10 @@
       <a href="#home"><img src="/img/levelup-sm.png" alt="LevelUp" class="sm-logo"></a>
     </div>
     <div class="small-8 columns hide-for-small-only">
-      <dl class="sub-nav" id="main-navigation">
-        <dd data-magellan-arrival="about">
-          <a href="#about">About</a>
-        </dd>
-        <dd data-magellan-arrival="speakers">
-          <a href="#speakers">Speakers</a>
-        </dd>
-        <dd data-magellan-arrival="venue">
-          <a href="#venue">Venue</a>
-        </dd>
-        <dd data-magellan-arrival="schedule">
-          <a href="#schedule">Schedule</a>
-        </dd>
-        <dd data-magellan-arrival="sponsors">
-          <a href="#sponsors">Sponsors</a>
-        </dd>
-      </dl>
+      
     </div>
     <div class="small-2 columns" id="navigation-register">
-      <a href="https://nvite.com/levelupcon" class="button large register noscroll">SOLD OUT!</a>
+      <a href="http://twitter.com/levelupcon" class="button large register noscroll">@levelupcon</a>
     </div>
   </div>
 </div>
