--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -4,21 +4,20 @@
   <div class="row">
     <div class="large-12 columns">
       <div class="">
-        <h3>Specially Priced Attendee Badges On Sale Now!</h3>
         <h1 class="indent">Level Up</h1>
 
         <!-- Responsive retina image media queries -->
 
         <img src="/img/logo-lg.png" alt="LevelUp Logo" data-interchange="[/img/logo-lg.png, (default)], [/img/logo-lg@2x.png, (retina)]" class="logo" >
         <noscript><img src="/img/logo-lg.png" alt="LevelUp Logo"></noscript>
-        <h4 class="indent">Creative Tech Conference 2014</h4>
+        <h4 class="indent">Creative Tech Conference 2015</h4>
         <h5 class="indent">In Association with <a href="http://www.madglory.com">MadGlory</a></h5>
 
         <div class="row">
-          <div class="large-3 columns details">October 8 &amp; 9, 2014</div>
+          <div class="large-3 columns details">October 8 &amp; 9, 2015</div>
           <div class="large-3 large-push-6 columns details">Saratoga Springs, NY</div>
           <div class="large-4 large-pull-4 columns">
-            <a href="https://nvite.com/levelupcon" class="large button signup">SOLD OUT!</a>
+            <a href="#" class="large button signup" data-reveal-id="firstModal">Keep Me Updated</a>
           </div>
         </div>
       </div>
