--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div class="full-width subfooter">
   <div class="row">
     <div class="large-12 columns">
-      <p>Level Up Conference in association with <a href="http://madglory.com" target="_blank">MadGlory</a>  |  <a href="/code-of-conduct">Code of Conduct</a></p>
+      <p>Level Up Conference in association with <a href="http://madglory.com" target="_blank">MadGlory</a>  |  <a href="/code-of-conduct">Code of Conduct</a> | Past Years: <a href="/2014">2014</a></p>
 
     </div>
   </div>
