--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -14,7 +14,7 @@
         <h5 class="indent">In Association with <a href="http://www.madglory.com">MadGlory</a></h5>
 
         <div class="row">
-          <div class="large-3 columns details">Returning Soon</div>
+          <div class="large-3 columns details">Stay Tuned</div>
           <div class="large-3 large-push-6 columns details">Saratoga Springs, NY</div>
           <div class="large-4 large-pull-4 columns">
             <a href="#" class="large button signup" data-reveal-id="firstModal">Keep Me Updated</a>
